# fastapi-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/routers/: system.py
